<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="home_menu_search">Search</string>
    <string name="home_menu_shuffle">Shuffle</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_refresh">Refresh</string>
    <string name="category_songs">Songs</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="category_dates">Dates</string>
    <plurals name="songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <plurals name="artists">
        <item quantity="one">%d Artist</item>
        <item quantity="other">%d Artists</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="follow_system">Follow system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_album">Album</string>
    <string name="categories">Categories</string>
    <string name="operations">Operations</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_year">Unknown year</string>
    <string name="refreshed_songs">Refreshed %1$s songs</string>
    <string name="search">Search</string>
    <string name="settings_app_name">App name</string>
    <string name="settings_contributors">Contributors</string>
    <string name="play_next">Play next</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="details">Details</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="gramophone_crashed" translatable="false">Crash log</string>
    <string name="crash_gramophone_version" translatable="false">Gramophone version</string>
    <string name="crash_phone_model" translatable="false">Model</string>
    <string name="crash_phone_brand" translatable="false">Brand</string>
    <string name="crash_sdk_level" translatable="false">SDK Level</string>
    <string name="crash_time" translatable="false">Time</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="album_artist">Album artist</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_version">Version</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_artist">Artist</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_mediastore_filter">Song minimum length (seconds)</string>
    <string name="settings_repository">Repository</string>
    <string name="dialog_album">Album</string>
    <string name="dialog_genre">Genre</string>
    <string name="dialog_album_artist">Album artist</string>
    <string name="dialog_track_number">Track number</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_path">Path</string>
    <string name="unknown_album">Unknown album</string>
    <string name="recently_added">Recently added</string>
    <string name="folders">Folders</string>
    <string name="settings_app_theme">App theme</string>
    <string name="natural_order">Natural order</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Display</string>
    <string name="home_menu_equalizer">Equalizer</string>
    <string name="equalizer_not_found">Equalizer not found!</string>
    <string name="compact_list">List (compact)</string>
    <string name="check_for_updates">Check our channel for updates!</string>
    <string name="settings_default_progress_bar">Default progress bar</string>
    <string name="settings_default_progress_bar_summary">Enable material styled progress bar</string>
    <string name="home_menu_about">About</string>
    <string name="opensource_info">Open-sourced under GPL-3.0\nCopyright © 2024 Akane Foundation</string>
    <string name="playlist_favourite">Favourite</string>
    <string name="app_name">Accord</string>
    <string name="default_time" translatable="false">0:00</string>
    <string name="settings_contributors_detail" translatable="false">AkaneTan, 123Duo3, nift4</string>
    <string name="upper_folder" translatable="false">..</string>
    <string name="now_playing">Now playing</string>
    <string name="settings_content_based_color_summary">Enable album based color generation</string>
    <string name="settings_content_based_color">Content based colors</string>
    <string name="settings_package_type">Package type</string>
    <string name="no_lyric_found">No lyric found</string>
    <string name="dialog_disc_number">Disc number</string>
    <string name="disc">Disc</string>
    <string name="unknown_title">Unknown title</string>
    <string name="filesystem">Filesystem</string>
    <string name="dialog_mime">Mime type</string>
    <string name="dialog_duration">Duration</string>
    <string name="settings_title_center">Centered title</string>
    <string name="settings_title_center_summary">Use centered title for full player</string>
    <string name="settings_player_ui">Player UI</string>
    <string name="settings_player_ui_summary">Full player UI, lyrics</string>
    <string name="settings_appearance_summary">Application appearance, theme modes</string>
    <string name="settings_about_app">About</string>
    <string name="settings_about_gramophone">About application</string>
    <string name="settings_behavior_summary">Filters, launch behaviors</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_library">Library</string>
    <string name="settings_library_summary">Manage media library</string>
    <string name="settings_player_options">Audio</string>
    <string name="settings_player_options_summary">Output quality, playback behavior</string>
    <string name="settings_customization">Customization</string>
    <string name="settings_customization_summary">Manage customization options</string>
    <string name="settings_album_round_corner_summary">Enable round corner in full player</string>
    <string name="settings_album_round_corner">Album round corner</string>
    <string name="settings_float_output">Float audio output</string>
    <string name="settings_float_output_summary">Enable 32 bit float output</string>
    <string name="settings_audio">Audio</string>
    <string name="settings_skip_silence">Skip silence</string>
    <string name="settings_skip_silence_summary">Skip silence when playing tracks</string>
    <string name="settings_hardware_acceleration">Playback speed</string>
    <string name="settings_hardware_acceleration_summary">Enable playback speed hardware acceleration</string>
    <string name="settings_title_bold">Bold title</string>
    <string name="settings_title_bold_summary">Use bold title for full player</string>
    <string name="settings_experimental_settings">Experimental</string>
    <string name="settings_experimental_settings_summary">Testing features, misc</string>
    <string name="settings_color_accuracy_summary">Make color generation accurate</string>
    <string name="settings_color_accuracy">Color accuracy</string>
    <string name="sort_by_add_date">Add date</string>
    <string name="sort_by_modified_date">Modified date</string>
    <string name="settings_lyric">Lyric</string>
    <string name="settings_lyrics_configuration">Lyrics configuration</string>
    <string name="settings_lyrics_configuration_summary">Configure lyrics appearance</string>
    <string name="settings_lyrics_bold">Bold lyrics</string>
    <string name="settings_lyrics_bold_summary">Use a heavier font weight for lyrics</string>
    <string name="settings_lyrics_center">Center alignment</string>
    <string name="settings_lyrics_center_summary">Use center alignment for lyrics</string>
    <string name="settings_play_on_launch">Play on launch</string>
    <string name="settings_play_on_launch_summary">Play music on launch</string>
    <string name="settings_blacklist">Blacklist</string>
    <string name="settings_blacklist_folder_summary">Filter songs from certain folders</string>
    <string name="settings_blacklist_folder">Blacklist folders</string>
    <string name="settings_category_basic_info">Basic info</string>
    <string name="preference_category_quality">Quality</string>
    <string name="settings_category_misc">Misc</string>
    <string name="settings_category_filters">Filters</string>
    <string name="settings_preference_category_application">Application</string>
    <string name="settings_category_full_player">Full player</string>
    <string name="settings_crash_application">Crash application</string>
    <string name="settings_crash_application_summary">Crash-O-Matic 3000</string>
    <string name="album_cover">Album cover</string>
    <string name="dialog_edit_metadata">Edit</string>
    <string name="dialog_lyrics">Lyrics</string>
    <string name="delete">Delete</string>
    <string name="delete_failed">Deleting song failed</string>
    <string name="delete_in_progress">Already deleting another song</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="album_covers_compat">Album cover compatibility mode</string>
    <string name="album_covers_compat_desc">Allow albums to have their own cover even if Android doesn\'t support this</string>
    <string name="deny_images"><![CDATA[Please deny \"Images & videos\" permission]]></string>
    <string name="grant_images"><![CDATA[Please grant \"Images & videos\" permission]]></string>
    <string name="crash_clipboard">Copied crash log to clipboard</string>
    <string name="crash_thread" translatable="false">Thread</string>
    <string name="settings_trim_lyrics">Remove spaces around lyrics</string>
    <string name="playlist">Playlist</string>
    <string name="manuscript">Manuscript</string>
    <string name="confirm">Confirm</string>
    <string name="manuscript_quote">\"Manuscript\"</string>
    <string name="collect_anytime">Collect Anytime</string>
    <string name="collect_anytime_desc">Collect your favorite melodies whenever you hear a song you love, and access them whenever you want.</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_notes_desc">Add notes to your favorite tracks, record your feelings, thoughts, or special memories. Revisit them here at anytime.</string>
    <string name="rearrange">Rearrange</string>
    <string name="rearrange_desc">You can revisit the list at any time to rearrange the order of songs, personalizing your music experience.</string>
    <string name="fgs_failed_channel">Playback failed to resume</string>
    <string name="fgs_failed_text">Click here to open the app and continue playback</string>
    <string name="fgs_failed_title">Failed to resume music playback</string>
    <string name="lossless">Lossless</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="library">Library</string>
    <string name="song_artist_album">Song, artist, album…</string>
    <string name="recommendations">Recommendations</string>
    <string name="recently_played">Recently played</string>
</resources>