<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/contrast_colorBackground"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ViewPagerFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/contrast_colorBackground"
        app:liftOnScrollColor="@color/contrast_colorBackground"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:background="@color/contrast_colorBackground"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
            app:collapsedTitleTextColor="@color/contrast_colorOnSurface"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.TitleLarge"
            app:expandedTitleTextColor="@color/contrast_colorOnSurface"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.HeadlineLarge"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:contentScrim="@android:color/transparent"
            app:title="@string/app_name"
            app:expandedTitleMarginStart="24dp"
            android:layout_marginStart="0dp"
            android:paddingStart="0dp"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingStart="24dp"
                app:titleMarginStart="0dp"
                android:paddingEnd="8dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/home_menu" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/contrast_colorBackground"
            app:tabIndicator="@drawable/selected_chip_background"
            app:tabIndicatorColor="@color/contrast_colorOnSurface"
            app:tabIndicatorFullWidth="true"
            app:tabMinWidth="0dp"
            app:tabBackground="@android:color/transparent"
            app:tabMode="scrollable"
            app:tabRippleColor="@android:color/transparent"
            app:tabSelectedTextColor="@color/contrast_colorOnSurface"
            app:tabTextColor="@color/contrast_colorOnSurfaceFainted"
            app:tabTextAppearance="@style/TabTextAppearance">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_songs" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_albums" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_artists" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_genres" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_dates" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_playlists" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/fragment_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>