<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/manuscript_icon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/ic_script_filled"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/contrast_colorOnSurface" />

    <TextView
        android:id="@+id/manuscript_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manuscript_quote"
        android:textSize="32sp"
        android:textColor="@color/contrast_colorOnSurface"
        android:layout_marginTop="48dp"
        android:textFontWeight="600"
        android:fontFamily="sans-serif"
        app:layout_constraintTop_toBottomOf="@id/manuscript_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/manuscript_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="48dp"
            android:paddingBottom="48dp">

            <TextView
                android:id="@+id/manuscript_container_title_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/manuscript_container_description_1"
                app:layout_constraintEnd_toEndOf="@id/manuscript_container_description_1"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/contrast_colorOnSurface"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="600"
                android:text="@string/collect_anytime" />

            <TextView
                android:id="@+id/manuscript_container_description_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="45dp"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/contrast_colorOnSurfaceFainted"
                app:layout_constraintTop_toBottomOf="@id/manuscript_container_title_1"
                app:layout_constraintStart_toEndOf="@id/manuscript_container_icon_1"
                android:text="@string/collect_anytime_desc" />

            <ImageView
                android:id="@+id/manuscript_container_icon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_manuscript_star"
                android:layout_marginStart="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manuscript_container_title_1"
                app:layout_constraintBottom_toBottomOf="@id/manuscript_container_description_1"/>

            <TextView
                android:id="@+id/manuscript_container_title_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/manuscript_container_description_2"
                app:layout_constraintEnd_toEndOf="@id/manuscript_container_description_2"
                app:layout_constraintTop_toBottomOf="@id/manuscript_container_description_1"
                android:textColor="@color/contrast_colorOnSurface"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="600"
                android:layout_marginTop="48dp"
                android:text="@string/add_notes" />

            <TextView
                android:id="@+id/manuscript_container_description_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="45dp"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/contrast_colorOnSurfaceFainted"
                app:layout_constraintTop_toBottomOf="@id/manuscript_container_title_2"
                app:layout_constraintStart_toEndOf="@id/manuscript_container_icon_2"
                android:text="@string/add_notes_desc" />

            <ImageView
                android:id="@+id/manuscript_container_icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_manuscript_note"
                android:layout_marginStart="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manuscript_container_title_2"
                app:layout_constraintBottom_toBottomOf="@id/manuscript_container_description_2"/>

            <TextView
                android:id="@+id/manuscript_container_title_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/manuscript_container_description_3"
                app:layout_constraintEnd_toEndOf="@id/manuscript_container_description_3"
                app:layout_constraintTop_toBottomOf="@id/manuscript_container_description_2"
                android:textColor="@color/contrast_colorOnSurface"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="600"
                android:layout_marginTop="48dp"
                android:text="@string/rearrange" />

            <TextView
                android:id="@+id/manuscript_container_description_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="19dp"
                android:layout_marginEnd="45dp"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textFontWeight="500"
                android:textColor="@color/contrast_colorOnSurfaceFainted"
                app:layout_constraintTop_toBottomOf="@id/manuscript_container_title_3"
                app:layout_constraintStart_toEndOf="@id/manuscript_container_icon_3"
                android:text="@string/rearrange_desc" />

            <ImageView
                android:id="@+id/manuscript_container_icon_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_manuscript_sort"
                android:layout_marginStart="45dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manuscript_container_title_3"
                app:layout_constraintBottom_toBottomOf="@id/manuscript_container_description_3"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:alpha="0"
        android:textColor="@color/contrast_colorBackground"
        android:fontFamily="sans-serif"
        android:textFontWeight="500"
        android:minHeight="64dp"
        app:cornerRadius="16dp"
        app:backgroundTint="@color/contrast_colorOnSurface"
        android:layout_marginBottom="42dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>