<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/contrast_colorBackground"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbar"
            style="?attr/collapsingToolbarLayoutMediumStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/top_app_bar_height"
            android:layout_marginStart="0dp"
            android:background="@color/contrast_colorBackground"
            android:paddingStart="0dp"
            app:collapsedTitleTextAppearance="@style/TextAppearance.App.TitleLarge"
            app:collapsedTitleTextColor="@color/contrast_colorOnSurface"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.App.HeadlineLarge"
            app:expandedTitleTextColor="@color/contrast_colorOnSurface"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/home"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"
                android:paddingBottom="0dp"
                app:layout_collapseMode="pin"
                app:menu="@menu/home_menu"
                app:titleMarginStart="0dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:dividerColor="@color/contrast_colorBackgroundContainer"
            app:dividerThickness="0.5dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/recommendations"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:textColor="@color/contrast_colorOnSurface"
                />

            <androidx.fluidrecyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_top"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/recently_played"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                android:textColor="@color/contrast_colorOnSurface"
                />

            <androidx.fluidrecyclerview.widget.RecyclerView
                android:id="@+id/rv_r"
                android:layout_width="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:clipToPadding="false"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>